<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:padding="@dimen/distance_ten"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="@string/sort"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_name"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="30dip"
            android:text="@string/sort_name"
            android:textSize="20dip" />

        <RadioButton
            android:id="@+id/rb_time"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="30dip"
            android:text="@string/sort_time"
            android:textSize="20dip" />

        <RadioButton
            android:id="@+id/rb_type"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="30dip"
            android:text="@string/sort_type"
            android:textSize="20dip" />

        <RadioButton
            android:id="@+id/rb_size"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:paddingLeft="30dip"
            android:text="@string/sort_size"
            android:textSize="20dip" />

    </RadioGroup>

</LinearLayout>