<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a550211.filemanager.MainActivity">

    <include layout="@layout/title_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_image"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_image" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_image" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:background="@color/file_background" />

                    <LinearLayout
                        android:id="@+id/ll_video"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_video" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_video" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:background="@color/file_background" />

                    <LinearLayout
                        android:id="@+id/ll_audio"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_audio" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_audio" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/file_background"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_doc"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_doc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_doc" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:background="@color/file_background" />

                    <LinearLayout
                        android:id="@+id/ll_zip"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_comress" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_zip" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:background="@color/file_background" />

                    <LinearLayout
                        android:id="@+id/ll_apk"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_apk" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_apk" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/file_background"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_bluetooth"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_secrecy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_bluetooth" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:background="@color/file_background" />

                    <LinearLayout
                        android:id="@+id/ll_download"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_download" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_download" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:background="@color/file_background" />

                    <LinearLayout
                        android:id="@+id/ll_collection"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_collection" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_collection" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dip"
                    android:background="@color/file_background"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dip"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_all"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_all" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_all" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_lately"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_lately" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_lately" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_remote"
                        style="@style/file">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_remote_management" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/distance_five"
                            android:text="@string/file_remote" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dip"
                    android:background="@color/file_background"></View>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/distance_ten"
                    android:layout_marginRight="@dimen/distance_ten"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/distance_ten">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file_memory" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/file_all_memory" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/distance_ten"
                            android:text="@string/file_use" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="36" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/file_gb" />

                    </LinearLayout>
                </RelativeLayout>

                <SeekBar
                    android:id="@+id/file_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/distance_ten"
                    android:background="@drawable/btn_clear_selector"
                    android:gravity="center"
                    android:text="@string/file_clear"
                    android:textColor="@color/file_clear_color"
                    android:textSize="15sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>
